<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ManufacturingOptionsScreen</class>
 <widget class="QDialog" name="ManufacturingOptionsScreen">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>480</width>
    <height>272</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <property name="styleSheet">
   <string notr="true">background-color: rgb(49, 49, 49);</string>
  </property>
  <widget class="QLabel" name="titleManufacturingOptions">
   <property name="geometry">
    <rect>
     <x>85</x>
     <y>25</y>
     <width>271</width>
     <height>30</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <family>Roboto</family>
     <pointsize>14</pointsize>
    </font>
   </property>
   <property name="styleSheet">
    <string notr="true">color:#1788c3
</string>
   </property>
   <property name="text">
    <string>Manufacturing Options</string>
   </property>
  </widget>
  <widget class="QPushButton" name="backManufacturingOptions">
   <property name="geometry">
    <rect>
     <x>9</x>
     <y>25</y>
     <width>38</width>
     <height>30</height>
    </rect>
   </property>
   <property name="focusPolicy">
    <enum>Qt::NoFocus</enum>
   </property>
   <property name="styleSheet">
    <string notr="true">border:none;
border-radius:3px;
background-color: rgb(70, 70, 73);</string>
   </property>
   <property name="text">
    <string/>
   </property>
   <property name="icon">
    <iconset resource="../rsc/resource.qrc">
     <normaloff>:/icons/previous.png</normaloff>:/icons/previous.png</iconset>
   </property>
  </widget>
  <widget class="QScrollArea" name="scrollAreaConfiguration">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>64</y>
     <width>480</width>
     <height>209</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true"> QScrollBar:vertical {
     border: none;
     width: 5px;
 }
 QScrollBar::handle:vertical {
     background:#1788c3;
     min-height: 20px;
 }
 QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical {
     border: 2px #1788c3;
     width: 5px;
     height: 5px;
     background: #1788c3;
 }</string>
   </property>
   <property name="verticalScrollBarPolicy">
    <enum>Qt::ScrollBarAlwaysOn</enum>
   </property>
   <property name="widgetResizable">
    <bool>true</bool>
   </property>
   <widget class="QWidget" name="scrollAreaWidgetContentsConfiguration">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
      <width>464</width>
      <height>207</height>
     </rect>
    </property>
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
       <x>9</x>
       <y>9</y>
       <width>461</width>
       <height>201</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayoutConfiguration">
      <property name="leftMargin">
       <number>60</number>
      </property>
      <property name="topMargin">
       <number>5</number>
      </property>
      <property name="rightMargin">
       <number>60</number>
      </property>
      <property name="bottomMargin">
       <number>5</number>
      </property>
     </layout>
    </widget>
   </widget>
  </widget>
 </widget>
 <resources>
  <include location="../rsc/resource.qrc"/>
 </resources>
 <connections/>
</ui>
